
= rufus-doric CHANGELOG.txt


== rufus-doric - 0.1.2    not yet released

- introduced the Rufus::Doric.types hash ({ 'car' => MyDomain::Car })
- added property as an alias to h_accessor


== rufus-doric - 0.1.1    released 2010/03/22

- associations are in (_id[s]) for Model
- equality and hash for Model
- now raises if putting a design doc fails
- Rufus::Doric.db(dbname) returns the couchdb 'connection'
- Rufus::Doric::Value : one document containing a single [big] value


== rufus-doric - 0.1.0    released 2010/03/17

- initial release
